--- a/aifengshui/backcentral/pom.xml
+++ b/aifengshui/backcentral/pom.xml
@@ -21,6 +21,7 @@
         <mapstruct>1.5.5.Final</mapstruct>
         <mapstruct-processor>1.5.5.Final</mapstruct-processor>
         <fastjson>2.0.34</fastjson>
+      <mysql.version>8.0.33</mysql.version>
     </properties>
 
     <dependencies>
@@ -41,6 +42,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+      <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>${mysql.version}</version>
+      </dependency>
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
