解决附件和时间空间格式问题

--- a/aifengshui/backcentral/pom.xml
+++ b/aifengshui/backcentral/pom.xml
@@ -123,30 +123,33 @@
       <artifactId>thumbnailator</artifactId>
       <version>0.4.14</version>
     </dependency>
-
     <!-- 文件上传支持（Spring Boot已包含，确保存在） -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-
     <!-- 验证注解 -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
-
     <!-- 如果需要更复杂的图片处理 -->
     <dependency>
       <groupId>com.twelvemonkeys.imageio</groupId>
       <artifactId>imageio-jpeg</artifactId>
       <version>3.8.0</version>
     </dependency>
-
     <!-- 在dependencies部分添加 -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <!-- 服务自动重启-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
   </dependencies>
