支付环境配置

--- a/aifengshui/backcentral/pom.xml
+++ b/aifengshui/backcentral/pom.xml
@@ -152,5 +152,11 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
+    <!-- 贝宝支付-->
+    <dependency>
+      <groupId>com.paypal.sdk</groupId>
+      <artifactId>rest-api-sdk</artifactId>
+      <version>1.14.0</version>
+    </dependency>
   </dependencies>
 </project>
