--- a/aifengshui/backcentral/src/main/resources/application-test.yml
+++ b/aifengshui/backcentral/src/main/resources/application-test.yml
@@ -147,3 +147,9 @@ logging:
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
+#支付凭证配置
+paypal:
+  client:
+    id: YOUR_CLIENT_ID  # 替换为你的Client ID
+    secret: YOUR_SECRET  # 替换为你的Secret
+  mode: sandbox  # 沙盒环境，生产环境改为live
